src/main/java/com/example/digital_wallet_system/errors/exceptions/public_Exceptions/ResourceNotFoundException.java
package com.example.digital_wallet_system.errors.exceptions.public_Exceptions;

public class ResourceNotFoundException extends RuntimeException {
    public ResourceNotFoundException(String message) {
        super(message);
    }
}
